--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -34,7 +34,7 @@
             <p>Uma viagem visual pelos nossos momentos mais felizes. Cada foto, uma lembrança, um sorriso.</p>
             <div class="gallery">
                 <img src="img/pinguRenata.jpg" alt="Nosso momento 1">
-                <img src="img/renata.jpg" alt="Nosso momento 2">
+                <img src="img/Renata.jpg" alt="Nosso momento 2">
                 <img src="img/pcRenata.jpg" alt="Nosso momento 3">
                 </div>
         </section>
